# pyrene-motions

./: CMakeLists.txt  LICENSE  README  package.xml
grabHandrail15/: handrail_grab.posture  stairs_15cm_handrail_grab  stairs_15cm_handrail_grab_actuated  stairs_15cm_handrail_grab_actuated.posture
identification/: from_oem_to_posture.py
scripts/: from_oem_to_posture.py  pyrene_motion_tools.py
